Add search input to index page

--- a/app/views/programming_languages/index.html.erb
+++ b/app/views/programming_languages/index.html.erb
@@ -2,6 +2,11 @@
 
 <h1>Programming Languages</h1>
 
+<%= form_tag(programming_languages_path, method: :get) do %>
+  <%= text_field_tag(:search, params[:search]) %>
+  <%= submit_tag('Search') %>
+<% end %>
+
 <table>
   <thead>
     <tr>
