--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,7 @@
  */
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap/theme";
+@import "layout/application";
